# deep_gen_itmo

./: .gitignore  README.md  style_1.txt  style_2.txt  style_3.txt  style_4.txt  style_5.txt
hw_1/: README.md  hw_1_avatars.py  hw_1_part_1.py  hw_1_part_2.ipynb  pyproject.toml  style_1.txt  style_2.txt  style_3.txt  style_4.txt  style_5.txt  styles.py
hw_1/runs/autoencoder_20250511_121630/: events.out.tfevents.1746954990.LAPTOP-M8NEMNPB.23788.0
hw_1/runs/autoencoder_20250511_122140/: events.out.tfevents.1746955300.LAPTOP-M8NEMNPB.23788.1
hw_1/runs/autoencoder_20250511_124144/: events.out.tfevents.1746956504.LAPTOP-M8NEMNPB.23788.2
hw_1/runs/autoencoder_20250511_125422/: events.out.tfevents.1746957262.LAPTOP-M8NEMNPB.23788.3
hw_2/: README.md  hw_2.ipynb  pyproject.toml  requirements.txt
hw_2/runs/May13_18-23-40_DESKTOP-GS5ANEH/: events.out.tfevents.1747149820.DESKTOP-GS5ANEH.2948.0
hw_2/runs/May13_18-26-08_DESKTOP-GS5ANEH/: events.out.tfevents.1747149968.DESKTOP-GS5ANEH.2948.1
hw_2/runs/May13_18-30-04_DESKTOP-GS5ANEH/: events.out.tfevents.1747150204.DESKTOP-GS5ANEH.2948.2
hw_2/runs/May13_18-30-35_DESKTOP-GS5ANEH/: events.out.tfevents.1747150235.DESKTOP-GS5ANEH.2948.3
hw_2/runs/May13_18-31-05_DESKTOP-GS5ANEH/: events.out.tfevents.1747150265.DESKTOP-GS5ANEH.2948.4
hw_2/runs/May13_18-32-20_DESKTOP-GS5ANEH/: events.out.tfevents.1747150340.DESKTOP-GS5ANEH.2948.5
hw_2/runs/May13_18-49-48_DESKTOP-GS5ANEH/: events.out.tfevents.1747151388.DESKTOP-GS5ANEH.2948.6
hw_2/runs/May13_18-50-24_DESKTOP-GS5ANEH/: events.out.tfevents.1747151424.DESKTOP-GS5ANEH.2948.7
hw_2/runs/May13_19-09-02_DESKTOP-GS5ANEH/: events.out.tfevents.1747152542.DESKTOP-GS5ANEH.2948.8
hw_2/runs/May13_20-41-48_DESKTOP-GS5ANEH/: events.out.tfevents.1747158108.DESKTOP-GS5ANEH.2948.9
hw_2/runs/May13_20-42-52_DESKTOP-GS5ANEH/: events.out.tfevents.1747158172.DESKTOP-GS5ANEH.2948.10
hw_2/runs/May21_12-21-52_DESKTOP-GS5ANEH/: events.out.tfevents.1747819312.DESKTOP-GS5ANEH.21320.0
hw_2/runs/May21_12-45-45_DESKTOP-GS5ANEH/: events.out.tfevents.1747820745.DESKTOP-GS5ANEH.21320.1
hw_2/runs/May21_12-46-07_DESKTOP-GS5ANEH/: events.out.tfevents.1747820767.DESKTOP-GS5ANEH.21320.2
hw_2/runs/May21_21-01-42_DESKTOP-GS5ANEH/Loss_Discriminator/: events.out.tfevents.1747850507.DESKTOP-GS5ANEH.26984.2
hw_2/runs/May21_21-01-42_DESKTOP-GS5ANEH/Loss_Generator/: events.out.tfevents.1747850507.DESKTOP-GS5ANEH.26984.3
hw_2/runs/May21_22-47-36_DESKTOP-GS5ANEH/: events.out.tfevents.1747856856.DESKTOP-GS5ANEH.12252.3
hw_2/runs/May21_22-52-17_DESKTOP-GS5ANEH/Loss_Discriminator/: events.out.tfevents.1747857141.DESKTOP-GS5ANEH.2452.1
hw_2/runs/May21_22-52-17_DESKTOP-GS5ANEH/Loss_Generator/: events.out.tfevents.1747857141.DESKTOP-GS5ANEH.2452.2
hw_2/runs/May21_23-16-22_DESKTOP-GS5ANEH/: events.out.tfevents.1747858582.DESKTOP-GS5ANEH.2452.3
hw_2/runs/May21_23-21-34_DESKTOP-GS5ANEH/: events.out.tfevents.1747858894.DESKTOP-GS5ANEH.7128.0
hw_2/runs/May21_23-23-05_DESKTOP-GS5ANEH/Loss_Discriminator/: events.out.tfevents.1747858990.DESKTOP-GS5ANEH.7128.2
hw_3/: README.md  pyproject.toml
hw_4/: README.md  pyproject.toml
(+7 files in other folders)
