[project]
name = "hw-2"
version = "0.1.0"
description = ""
authors = [
    {name = "Georgy Kiselev",email = "gsx2002@yandex.ru"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "torch (>=2.7.0,<3.0.0)",
    "torchvision (>=0.22.0,<0.23.0)",
    "ipython (>=9.2.0,<10.0.0)",
    "ipykernel (>=6.29.5,<7.0.0)",
    "jupyter (>=1.1.1,<2.0.0)",
    "tensorboard (>=2.19.0,<3.0.0)",
    "gdown (>=5.2.0,<6.0.0)",
    "wget (>=3.2,<4.0)",
    "matplotlib (>=3.10.3,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
