[project]
name = "hw-4"
version = "0.1.0"
description = ""
authors = [
    {name = "Georgiy Kiselev",email = "gsx2002@yandex.ru"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel (>=6.29.5,<7.0.0)",
    "ipython (>=9.2.0,<10.0.0)",
    "torch (==2.2.1)",
    "accelerate (>=1.7.0,<2.0.0)",
    "transformers (>=4.51.3,<5.0.0)",
    "ftfy (>=6.3.1,<7.0.0)",
    "gradio (>=5.29.1,<6.0.0)",
    "natsort (>=8.4.0,<9.0.0)",
    "safetensors (>=0.5.3,<0.6.0)",
    "bitsandbytes (>=0.45.5,<0.46.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
